poc of parallel ksql builds